AI-JADEDEVS4/src/objects/Reference_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_CSM__c</fullName>
        <formula>Opportunity__r.Account.Account_CSM__r.LastName</formula>
        <label>Account CSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Product_Preferences__c</fullName>
        <label>Adaptive Product Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OfficeConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Revenue__c</fullName>
        <label>Company Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Hyperion Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle PBCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prophix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI360/Solver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP BPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagetik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vena Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3ESI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9Dots proCube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABS Financial Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account-Ability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acorn Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Computer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alight Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGUS Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud ABM (Powerplan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BudgetPak/XLerant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castaway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPSI Rycan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>deFacto Performance Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ERP_System__c</fullName>
        <label>ERP System</label>
        <picklist>
            <picklistValues>
                <fullName>Abila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccountMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axapta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Costpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epicor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Famous Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fathom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FinancialForce.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Plains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Grown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maconomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mas (90,200,500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics NAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft FRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mySAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetSuite</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction, Architecture &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals, Biotech, Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing, Media, Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software &amp; Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking, Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate, Leasing &amp; Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business, Professional, &amp; Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Management, Recycling, Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality, Gaming, Hotel, Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofits, Charities, Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Requirements__c</fullName>
        <label>Integration Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats_Preference__c</fullName>
        <label>Number of Seats Preference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_references_needed__c</fullName>
        <label>Number of references needed?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>References_needed_by_what_date__c</fullName>
        <label>References needed by what date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Researching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_which_system__c</fullName>
        <label>To which system(s)?</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_3_5_takeaways_from_reference_call__c</fullName>
        <label>Top 3-5 takeaways from reference call?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Peer to Peer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case_Requested__c</fullName>
        <label>What kind of use case required?</label>
        <type>TextArea</type>
    </fields>
    <label>Reference Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reference Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Comments_field_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT(Integration_Requirements__c) = &quot;Yes&quot;,
ISBLANK(To_which_system__c)
)</errorConditionFormula>
        <errorDisplayField>To_which_system__c</errorDisplayField>
        <errorMessage>Comments field is required</errorMessage>
    </validationRules>
</CustomObject>